Lots of changes to fully integrate OAuth #463